[gd_scene load_steps=8 format=3 uid="uid://cc65moi2jl54y"]

[ext_resource type="Script" uid="uid://h2wf7m2w02ka" path="res://world/level_door/level_door.gd" id="1_vul7k"]
[ext_resource type="AudioStream" uid="uid://dqlhqhd6lo5h6" path="res://assets/sfx/door/main-door-opening-38280.wav" id="2_cowjp"]
[ext_resource type="AudioStream" uid="uid://culqgq3yj7n1l" path="res://assets/sfx/door/main-door-closing-38280.wav" id="3_l7k31"]

[sub_resource type="Animation" id="Animation_tse0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vul7k"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_cowjp")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_c57h4"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloseSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_l7k31")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oap2s"]
_data = {
&"RESET": SubResource("Animation_tse0d"),
&"fade_in": SubResource("Animation_vul7k"),
&"fade_out": SubResource("Animation_c57h4")
}

[node name="LevelDoor" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_vul7k")

[node name="SpawnPosition" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oap2s")
}

[node name="OpenSound" type="AudioStreamPlayer" parent="."]

[node name="CloseSound" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
